[package]
name = "zmq-cli"
version = "0.1.0"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
log = "0.4"
simple_logger = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zmq = "0.9"
rand = "0.7"